# Turing

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: googletest-download.cmake
examples/: Ejemplo_MT.txt  input.txt  multitrack.txt  problem_1.txt  problem_2.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  turing.cpp  turing.hpp  turingbuilder.cpp  turingbuilder.hpp
src/data/: CMakeLists.txt  alphabet.cpp  alphabet.hpp  tape.cpp  tape.hpp
src/state/: CMakeLists.txt  state.cpp  state.hpp  transition.cpp  transition.hpp
src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
tests/: CMakeLists.txt
tests/data/: CMakeLists.txt  test_alphabet.cpp  test_tape.cpp
tests/state/: CMakeLists.txt  test_state.cpp  test_transition.cpp
